Fixing problem with overflow text.

--- a/src/app/pages/job-details/job-details.component.css
+++ b/src/app/pages/job-details/job-details.component.css
@@ -84,6 +84,11 @@
   align-items: center;
 }
 
+.title{
+  overflow-wrap: anywhere;
+  white-space: break-spaces;
+}
+
 .uil {
   font-size: 25px;
   color: black;
